overflow fix on enemy selection

--- a/src/assets/styles/HeroSelection.css
+++ b/src/assets/styles/HeroSelection.css
@@ -298,6 +298,7 @@
     width: 50%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .enemy-overview-card {
